# Aerobatic-Planner

./: .gitignore  README.md
aerobatic_ws/src/FAST_LIO/: CMakeLists.txt
aerobatic_ws/src/FAST_LIO/Log/: mat_pre.txt
aerobatic_ws/src/FAST_LIO/config/: mid360.yaml
aerobatic_ws/src/FAST_LIO/src/: imu_rotate.py  laserMapping.cpp
aerobatic_ws/src/intention_get_corridor/config/: indoor_params.yaml  test_corridor.txt
aerobatic_ws/src/intention_get_corridor/src/: intention_get_corridor_node.cpp
aerobatic_ws/src/livox_ros_driver2/: CMakeLists.txt
aerobatic_ws/src/livox_ros_driver2/config/: MID360_config.json
aerobatic_ws/src/px4ctrl/: CMakeLists.txt
aerobatic_ws/src/px4ctrl/config/: ctrl_param_fpv.yaml  (+2 more)
aerobatic_ws/src/uav_simulator/uav_gazebo/: CMakeLists.txt  package.xml
aerobatic_ws/src/uav_simulator/uav_gazebo/launch/: algorithm.launch  fastlio_mapping.launch  mapping.launch  simulation.launch  visualize.launch
aerobatic_ws/src/uav_simulator/uav_gazebo/model/Mid360/: Mid360.sdf  model.config
aerobatic_ws/src/uav_simulator/uav_gazebo/model/iris_3d_lidar_360/: iris_3d_lidar_360.sdf  model.config
aerobatic_ws/src/uav_simulator/uav_gazebo/model/iris_3d_lidar_360_reverse/: iris_3d_lidar_360_reverse.sdf  model.config
aerobatic_ws/src/uav_simulator/uav_gazebo/model/iris_lightweight/: iris.sdf
aerobatic_ws/src/uav_simulator/uav_gazebo/model/wall/: model.sdf
aerobatic_ws/src/uav_simulator/uav_gazebo/shfile/: connect.sh  experiment.sh  simulation.sh  visualize.sh
aerobatic_ws/src/uav_simulator/uav_gazebo/world/: uav_simulation.world
(+24 files in other folders)
